Add host and port information to instanceTab.hbs

--- a/noname/src/main/resources/renderer/hbs/instanceTab.hbs
+++ b/noname/src/main/resources/renderer/hbs/instanceTab.hbs
@@ -1,3 +1,5 @@
 <p>Env Username: {{data.username}}</p>
 <p>Env Password: {{data.password}}</p>
 <p>Env Database: {{data.database}}</p>
+<p>Env Host: {{data.host}}</p>
+<p>Env Port: {{data.port}}</p>
